# ironshield

./: .gitignore  Cargo.toml  README.md  build-gui.yml  build-installer.yml  e2e-tests.yml  index.html  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build-agent.yml  build-gui.yml  build-installer.yml  deploy-api.yml
agent/: Cargo.toml
agent/signatures-sample/: malicious_hashes.txt  rules.yar
agent/src/: api_client.rs  audit_log.rs  autorun_guard.rs  config.rs  firewall.rs  hasher.rs  hidden_files.rs  license.rs  main.rs  offline_queue.rs  persistence_scan.rs  process_killer.rs  pup_cleaner.rs  quarantine.rs  ransomware_guard.rs  scanner.rs  self_protect.rs  usb_watcher.rs  watcher.rs
api/:  - Copie.htaccess  .htaccess  index - Copie.php
api/config/: database.php
api/controllers/: activate.php  alerts.php  config.php  events.php  health.php
api/lib/: helpers.php
installer/: README.md
installer/src/: POST-INSTALL.txt  Product.wxs  register-tasks.cmd  unregister-tasks.cmd
scripts/: generate_license.php  whitelist_add.php
shared/src/: lib.rs
signatures/: .htaccess
sql/: schema.sql
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AlertsFeed.tsx  PulseStrip.tsx  TokenGate.tsx
src/lib/: api.ts  types.ts
tests/: e2e.sh  unit.php
updater/: Cargo.toml
updater/src/: main.rs
