[package]
name = "ironshield-updater"
version.workspace = true
edition.workspace = true

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"

[[bin]]
name = "ironshield-updater"
path = "src/main.rs"
